hphp/hack/test/typecheck/refinements/inter_var_sub_var.php.like_types.exp
File "inter_var_sub_var.php", line 12, characters 5-85:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
